# RIFT_Next

./: .gitignore  CMakeLists.txt  README.md  _clang-format
applications/RIFT_cli/: CMakeLists.txt  command_line_parser.cpp  command_line_parser.h  main.cpp
src/: CMakeLists.txt
src/core/data_types/: rgb_color.h  scatter_record.h  vec3.h
src/core/data_types/accumulators/: alpha_accumulator.cpp  alpha_accumulator.h  i_accumulator.h  rgb_accumulator.cpp  rgb_accumulator.h  rgba_accumulator.cpp  rgba_accumulator.h
src/core/data_types/buffers/: i_buffer.h  image_tile.h  pixels.h  result_buffer.cpp  result_buffer.h  rgba_buffer.cpp  rgba_buffer.h  tile.h  tile_buffer.cpp  tile_buffer.h  view.cpp  view.h
src/core/data_types/containers/: param_array.h  render_settings.h  scene.cpp  scene.h  texture_store.cpp  texture_store.h
src/core/data_types/pixel_types/: pixel.h
src/core/data_types/records/: hit_record.h  scatter_record.h
src/core/data_types/tiles/: image_tile.cpp  image_tile.h  tile_buffer.cpp  tile_buffer.h
src/core/image_writers/: i_out_writer.h  jpeg_writer.cpp  jpeg_writer.h  oiio_writer.cpp  oiio_writer.h  png_writer.cpp  png_writer.h
src/core/lighting_integrators/: direct_lighting.cpp  direct_lighting.h  i_light_integrator.h  i_light_integrator_list.cpp  i_light_integrator_list.h  light_sample_path.cpp  light_sample_path.h  path_tracer.cpp  path_tracer.h
src/core/raytracing/: aabb.cpp  aabb.h  bvh_node.cpp  bvh_node.h  onb.h  scatter_functions.h  utility_functions.h
src/core/raytracing/pdfs/: cosine_pdf.h  hitable_pdf.h  mixture_pdf.h
src/core/render_process/: final_render_controller.cpp  final_render_controller.h  i_render_controller.h  render_thread.cpp  render_thread.h  test_render_controller.cpp  test_render_controller.h  tile_pool.cpp  tile_pool.h
src/core/rendering/: final_render_controller.cpp  final_render_controller.h  i_controller_factory.h  i_render_controller.h  render_controller.cpp  render_controller.h  render_worker.cpp  render_worker.h  test_render_controller.cpp  test_render_controller.h  tile_pool.cpp  tile_pool.h
src/core/samplers/: i_render_sampler.h  i_render_sampler_list.cpp  i_render_sampler_list.h  random_sampler.cpp  random_sampler.h
src/materials/: dielectric.cpp  dielectric.h  diffuse_light.h  i_material.h  lambertian.cpp  lambertian.h  metal.cpp  metal.h
src/objects/camera/: i_camera.h  thin_lens_camera.cpp  thin_lens_camera.h
src/objects/hitables/: box.cpp  box.h  bvh_node.cpp  bvh_utils.h  constant_medium.cpp  constant_medium.h  hitable_list.h  i_hitable.h  instancers.cpp  instancers.h  moving_sphere.cpp  moving_sphere.h  rect.cpp  rect.h  sphere.cpp  sphere.h
src/textures/: checker_tex.cpp  checker_tex.h  constant_tex.h  i_texture.h  image_texture.cpp  image_texture.h  noise_texture.h  sky_gradient.cpp  sky_gradient.h
src/utilities/: color_utilities.h  utility_functions.h
src/utilities/accumulators/: alpha_accumulator.h  i_accumulator.h  rgb_accumulator.cpp  rgb_accumulator.h
src/utilities/buffer_processing/: buffer_utilities.h  half_buffer.cpp  half_buffer.h  image_buffer.cpp  image_buffer.h  output_buffer.cpp  output_buffer.h  unsigned_char_buffer.cpp  unsigned_char_buffer.h
src/utilities/containers/: render_settings.h  scene.cpp  scene.h
src/utilities/containers/records/: hit_record.h  scatter_record.h
src/utilities/containers/render_buffers/: view.cpp  view.h
src/utilities/containers/tiles/: image_tile.h  tile_buffer.cpp  tile_buffer.h
src/utilities/data_structures/: matrix4x4.cpp  matrix4x4.h  pixel.h  rgb_color.h  vec3.h
src/utilities/debugging_tools/: file_writer.h
src/utilities/generators/: scene_generator.cpp  scene_generator.h
src/utilities/image_writers/: i_out_writer.h  jpeg_writer.cpp  jpeg_writer.h  oiio_writer.cpp  oiio_writer.h  output_writer.cpp  output_writer.h  pgm_writer.cpp  pgm_writer.h  png_writer.cpp  png_writer.h
src/utilities/logging/: master_logger.h
src/utilities/maths/: maths.h
src/utilities/noises/: perlin.h
src/utilities/rng/: drand48.cpp  drand48.h  i_rand_generator.h  i_rand_generator_list.cpp  i_rand_generator_list.h  xoroshiro128.cpp  xoroshiro128.h
src/utility/: rift_pointer.h
src/utility/buffers/: i_buffer.h  pixel_buffer.cpp  pixel_buffer.h  rgba_buffer.cpp  rgba_buffer.h
src/utility/containers/: camera_settings.h  param_array.cpp  param_array.h  render_settings.cpp  render_settings.h  scene.cpp  scene.h  settings_matrix.h  texture_store.cpp  texture_store.h
src/utility/data_types/: scatter_record.h
src/utility/generators/: scene_generator.cpp  scene_generator.h
src/utility/image_writers/: i_out_writer.h  png_writer.h
src/utility/math_functions/: utility_functions.h
src/utility/system/_dll/: dll_symbol.h
